# Dota2_roast_generator

./: .env.example  .gitignore  BACKEND_USAGE.md  DEPLOYMENT.md  PROJECT_LOG.md  Procfile  README.md  pyproject.toml  railway.toml  requirements.txt  test_match.py
app/: errors.py  main.py
app/db/: models.py  session.py
app/repositories/: match_repo.py  player_repo.py  score_repo.py
app/routes/: matches.py  players.py
app/services/: critique_service.py  match_service.py  player_service.py  scoring_utils.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: LanguageToggle.tsx  MatchCard.tsx  PercentileBar.tsx  PhaseBar.tsx  RecurringPatternCard.tsx  RoastCard.tsx  ScoreBadge.tsx
frontend/contexts/: LanguageContext.tsx
frontend/lib/: i18n.ts  parseSteam.ts  profile.ts  types.ts
logs/: prompts.md
src/: benchmarks.py  constants.py  fetch_player.py  heroes.py  queries.py  scoring.py  stratz_client.py
src/dota_core/: __init__.py  client.py  config.py  constants.py
src/dota_core/api/: __init__.py  schemas.py
src/dota_core/benchmarks/: __init__.py  fetch.py  priors.py  transform.py
src/dota_core/domain/: __init__.py  heroes.py  models.py
src/dota_core/ingest/: __init__.py  match_fetch.py  player_fetch.py  queries.py
src/dota_core/roast/: __init__.py  evidence_selector.py  longform_context_builder.py  longform_prompt_builder.py  models.py  multi_match_summary.py  roast_tags.py  role_pattern_summary.py  tag_engine.py
tests/: test_critique_pipeline.py  test_roast_tags.py
(+14 files in other folders)
